# big_matrix_cocluster

./: .gitignore  LICENSE  README.md  __init__.py  bicluster.py  cocluster.yaml  cocluster.yml  coclusterSVD.py  core.py  detection.py  distribution.ipynb  expSetting.py  exportEnv.sh  export_env.sh  m_Tp_p.py  main.ipynb  main.py  main_ipy.py  notebook.py  output.txt  pipeline.py  pyproject.toml  pyrightconfig.json  result.pkl  result.txt  run_hpc.sh  scoring.py  setup.py  slurm-468868.out  spectral_cocluster.ipynb  submatrix.py  test_bicluster.py  test_coclusterSVD.py  test_core.py  test_detection.py  test_scoring.py  test_visualization.py  visualization.py
src/: __init__.py  bicluster.py  coclusterSVD.py  core.py  detection.py  expSetting.py  main.py  pipeline.py  scoring.py  setup.py  submatrix.py  visualization.py
test/: test_bicluster.py  test_core.py  test_detection.py  test_init.py  test_pipeline.py  test_scoring.py  test_visualization.py
