[project]
name = "big-matrix-cocluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attr>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "seaborn>=0.11",
]
